# tcf4

./: README.md
Shopping - Copia/: Accesso.cpp  Accesso.h  Account.cpp  Account.h  CMakeLists.txt  Carta.cpp  Carta.h  Catalogo.h  Categorie.cpp  Categorie.h  Maglie.cpp  Maglie.h  Menu.cpp  Menu.h  Menusel.cpp  Menusel.h  Metpagamento.h  Oggetto.cpp  Oggetto.h  Pantaloni.cpp  Pantaloni.h  Paypal.cpp  Paypal.h  Registrazione.cpp  Registrazione.h  carrello.cpp  carrello.h  main.cpp
